# shGame

./: README.md
GameMasterLocal/: CMakeLists.txt
GameMasterLocal/lib/: printf.hpp
GameMasterLocal/src/: gameStateHandlers.cpp  gameStateHandlers.h  main.cpp  messages.h  util.cpp  util.h
shGameLogic/: CMakeLists.txt
shGameLogic/Tests/: CMakeLists.txt  CardRange.cpp  GameEvent.cpp  Player.cpp  PolicyEvent.cpp  shGame.cpp  stringConversions.cpp  util.cpp
shGameLogic/src/: CardRange.cpp  CardRange.h  GameEvent.cpp  GameEvent.h  GlobalTypes.h  PolicyEvent.cpp  PolicyEvent.h  enumsToString.cpp  enumsToString.h  rules.cpp  rules.h  shGameLogic.cpp  shGameLogic.h  util.cpp  util.h
